# Django

jimukyoku/: pyproject.toml
jimukyoku/app/common/: urls.py
jimukyoku/app/common/views/: __init__.py
jimukyoku/app/config/: settings.py  urls.py
jimukyoku/app/member/: urls.py
jimukyoku/app/member/models/: __init__.py  personal_member.py
jimukyoku/app/member/models/tests/: test_example.py
jimukyoku/app/member/views/: __init__.py  personal_member_list_view.py
jimukyoku/app/mynumber/: urls.py
jimukyoku/app/mynumber/views/: __init__.py
jimukyoku/app/static/css/lib/: svg-paper.css
jimukyoku/app/static/js/lib/: svg-paper.js
jimukyoku/app/templates/common/: base-report.html  base.html  top.html
jimukyoku/app/templates/member/: personal_member_list.html
jimukyoku/app/templates/mynumber/: test.html
