[tool.poetry]
name = "jimukyoku"
version = "0.1.0"
description = ""
authors = ["watanabe-shintomu <watanabe.shintomu@clouds-inc.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pre-commit = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
